--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,8 +1,10 @@
-@font-face {
-  font-family: 'Inter';
-  src: url('/fonts/inter/Inter-Regular.woff2') format('woff2'),
-    url('/fonts/inter/Inter-Regular.woff') format('woff');
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-}
+//@font-face {
+//  font-family: 'Inter';
+//  src: url('/fonts/inter/Inter-Regular.woff2') format('woff2'),
+//    url('/fonts/inter/Inter-Regular.woff') format('woff');
+//  font-style: normal;
+//  font-weight: 400;
+//  font-display: swap;
+//}
+
+@import "./Gilroy/gilroy.css";
