--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,8 +1,10 @@
 @import 'reset';
 @import 'normalize';
 @import 'fonts';
+@import 'typography';
 
 body {
-  font-family: 'Inter';
+  font-family: Gilroy, sans-serif;
   font-weight: 400;
+  background: #030303;
 }
