--- a/segments/01. FirstSection/FirstSection.module.scss
+++ b/segments/01. FirstSection/FirstSection.module.scss
@@ -85,7 +85,7 @@
   & > div {
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 50px 22px 32px;
     flex: 1 1 33.33333%;
     flex-direction: column;
@@ -95,7 +95,7 @@
       flex-direction: row;
       padding: 24px;
       align-items: center;
-      justify-content: start;
+      justify-content: flex-start;
       margin: 8px 0;
     }
 
@@ -161,7 +161,7 @@
     width: 250px;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     margin-bottom: 16px;
 
     svg {
