--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -56,3 +56,17 @@ h2 {
     line-height: 56px;
   }
 }
+
+h5 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 40px;
+  /* identical to box height, or 187% */
+
+  text-align: center;
+
+  /* White */
+
+  color: #ffffff;
+}
