--- a/segments/03. ThirdSections/ThirdSections.module.scss
+++ b/segments/03. ThirdSections/ThirdSections.module.scss
@@ -2,7 +2,7 @@
 
 .third_section {
   margin-top: 210px;
-  overflow: hidden;
+  overflow-x: hidden;
 
   @media (max-width: $breakpoint) {
     margin-top: 88px;
