--- a/segments/09. NinethSection/NinethSection.module.scss
+++ b/segments/09. NinethSection/NinethSection.module.scss
@@ -1,8 +1,37 @@
 @import 'styles/vars';
 
 .section9 {
+}
+
+.contacts_mob {
   display: none;
   @media (max-width: $breakpoint) {
     display: block;
+  }
+}
+
+.map {
+  width: 100%;
+  height: 544px;
+  background-image: url('./map.png');
+  background-position: 70% center;
+  @media (max-width: $breakpoint) {
+    background-position: 45% center;
+  }
+}
+
+.map_inner {
+  height: 100%;
+  width: 100%;
+  max-width: 1236px;
+  padding: 0 16px;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: auto;
+
+  @media (max-width: $breakpoint) {
+    display: none;
   }
 }
