--- a/segments/09. NinethSection/NinethSection.module.scss
+++ b/segments/09. NinethSection/NinethSection.module.scss
@@ -1,6 +1,11 @@
 @import 'styles/vars';
 
 .section9 {
+  margin-top: 210px;
+
+  @media (max-width: $breakpoint) {
+    margin-top: 88px;
+  }
 }
 
 .contacts_mob {
