--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -1,3 +1,8 @@
+@mixin anim {
+  transition: all 0.175s ease;
+  will-change: box-shadow;
+}
+
 .input {
   background: #1d1d1d;
 
@@ -8,10 +13,17 @@
   color: white;
   padding: 8px 16px;
   width: 100%;
+  box-shadow: 0 0 10px 3px rgba(255, 0, 0, 0);
+  @include anim;
 
   &::placeholder {
     /* identical to box height, or 178% */
 
     color: #7a7a7a;
   }
+}
+
+.error {
+  box-shadow: 0 0 10px 6px rgba(255, 0, 0, 0.4);
+  @include anim;
 }
