fixes + add Modal

--- a/segments/01. FirstSection/FirstSection.module.scss
+++ b/segments/01. FirstSection/FirstSection.module.scss
@@ -6,7 +6,7 @@
   padding-top: 40px;
 }
 
-.form_wrap {
+.form_wrap.form_wrap {
   background: #030303;
   border: 6px solid #8e4de1;
   box-sizing: border-box;
@@ -18,7 +18,7 @@
     order: 2;
     max-width: unset;
     width: calc(100% + 32px);
-    margin: 8px -16px;
+    margin: 16px -16px;
   }
 }
 
