--- a/segments/07. SeventhSection/SeventhSection.module.scss
+++ b/segments/07. SeventhSection/SeventhSection.module.scss
@@ -29,3 +29,11 @@
 .section7_item {
   margin: 20px 20px;
 }
+
+.form.form {
+  @media (max-width: $breakpoint) {
+    max-width: unset;
+    width: calc(100% + 32px);
+    margin: 8px -16px;
+  }
+}
