--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,6 +3,8 @@
 @import 'fonts';
 @import 'typography';
 
+@import 'components/src/carousel/style.css';
+
 @import '~bootstrap/scss/bootstrap-grid';
 @import '~bootstrap/scss/mixins';
 @import '~bootstrap/scss/transitions';
