--- a/segments/08. EighthSection/EighthSection.module.scss
+++ b/segments/08. EighthSection/EighthSection.module.scss
@@ -33,3 +33,35 @@
     display: block;
   }
 }
+
+.logo_wrap {
+  height: 270px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    width: auto;
+    height: 100%;
+    max-height: 150px;
+  }
+}
+
+.slider {
+  height: 270px;
+
+  :global {
+    .carousel-next:before {
+      background-image: url('./arrow.svg');
+      height: 64px;
+      width: 32px;
+    }
+    .carousel-prev:before {
+      background-image: url('./arrow.svg');
+      height: 64px;
+      width: 32px;
+      transform: rotate(180deg);
+    }
+  }
+}
