--- a/components/CommonModal/CommonModal.module.scss
+++ b/components/CommonModal/CommonModal.module.scss
@@ -2,8 +2,11 @@
   max-width: 480px;
 
   :global {
-    .modal-dialog {
+    .modal-content {
       max-width: 480px;
+      background: #030303;
+      border: 0;
+      border-radius: 0;
     }
   }
 }
