--- a/components/CallForm/CallForm.module.scss
+++ b/components/CallForm/CallForm.module.scss
@@ -63,3 +63,12 @@
   box-shadow: 0 0 10px 6px rgba(255, 0, 0, 0.4);
   @include anim;
 }
+
+.success_inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 300px;
+}
