--- a/segments/02. SecondSection/SecondSection.module.scss
+++ b/segments/02. SecondSection/SecondSection.module.scss
@@ -9,6 +9,11 @@
 }
 
 .header_wrap {
+  margin-bottom: 47px;
+
+  @media (max-width: $breakpoint) {
+    margin-bottom: 24px;
+  }
 }
 
 .second_section_items {
