--- a/components/AnimatedCheckbox/AnimatedCheckbox.module.scss
+++ b/components/AnimatedCheckbox/AnimatedCheckbox.module.scss
@@ -7,13 +7,13 @@
 .svg_start {
   transform: scale(3);
   //transform-origin: center top;
-  path {
+  path:nth-child(2) {
     @include anim;
     stroke-dasharray: 24;
     stroke-dashoffset: 24;
   }
 
-  rect {
+  path:first-child {
     @include anim;
     stroke-dasharray: 100;
     stroke-dashoffset: 100;
@@ -21,14 +21,14 @@
 }
 
 .svg_end {
-  path {
+  path:nth-child(2) {
     @include anim;
     stroke-dasharray: 24;
     stroke-dashoffset: 0;
     transition-delay: 1000ms;
   }
 
-  rect {
+  path:first-child {
     @include anim;
     stroke-dasharray: 100;
     stroke-dashoffset: 0;
